  (closes :issue:`362` and :issue:`366`)

- Fixed compatibility with Cython >= 0.20 (closes :issue:`386` and
  :issue:`387`)

- Fixed support for unicode node names in LRU cache (only Python 2 was
  affected). Closes :issue:`367` and :issue:`369`.

- Fixed support for unicode node titles (only Python 2 was affected).
  Closes :issue:`370` and :issue:`374`.

- Fixed a bug that caused the silent truncation of unicode attributes
  containing the '\0' character. Closes :issue:`371`.

- Fixed :func:`descr_from_dtype` to work as expected with complex types.
  Closes :issue:`381`.

- Fixed the :class:`tests.test_basics.ThreadingTestCase` test case.
  Closes :issue:`359`.

- Fix incomplete results when performing the same query twice and exhausting
  the second iterator before the first. The first one writes incomplete
  results to *seqcache* (:issue:`353`)

- Fix false results potentially going to *seqcache* if
  :meth:`tableextension.Row.update` is used during iteration
  (see :issue:`353`)

- Fix :meth:`Column.create_csindex` when there's NaNs

- Fixed handling of unicode file names on windows (closes :issue:`389`)

- No longer not modify :data:`sys.argv` at import time (closes :issue:`405`)

- Fixed a performance issue on NFS (closes :issue:`402`)

- Fixed a nasty problem affecting results of indexed queries.
  Closes :issue:`319` and probably :issue:`419` too.

- Fixed another problem affecting results of indexed queries too.
  Closes :issue:`441`.


Other changes
-------------

- Cython is not a hard dependency anymore (although developers will need it
  so as to generated the C extension code).

- The number of threads used by default for numexpr and Blosc operation that
  was set to the number of available cores have been reduced to 2.  This is
  a much more reasonable setting for not creating too much overhead.


  **Enjoy data!**

  -- The PyTables Developers


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 72
.. End: