@@ -223,7 +223,7 @@ class EArray(CArray):
         shape = list(self.shape)
         shape[maindim] = 0
         # The number of final rows
-        nrows = len(xrange(start, stop, step))
+        nrows = len(xrange(0, stop - start, step))
         # Build the new EArray object
         object = EArray(
             group, name, atom=self.atom, shape=shape, title=title,
